--- a/package.json
+++ b/package.json
@@ -9,14 +9,15 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@google/generative-ai": "^0.24.1",
-    "axios": "^1.13.5",
-    "framer-motion": "^12.34.3",
+    "axios": "^1.6.7",
+    "framer-motion": "^11.0.3",
+    "@google/generative-ai": "^0.2.1",
     "jwt-decode": "^4.0.0",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "react-hot-toast": "^2.6.0",
-    "react-icons": "^5.5.0"
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-hot-toast": "^2.4.1",
+    "react-icons": "^5.0.1",
+    "react-scripts": "5.0.1"
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^4.3.1",
